--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.h2.console.enabled=true
 
+server.error.whitelabel.enabled=false
+
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=900
