--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=DEBUG
 
-
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/springfield
+spring.datasource.url = jdbc:mysql://localhost:3306/springfield?useSSL=false
 spring.datasource.username = springuser
 spring.datasource.password = springpassword
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
@@ -19,8 +20,22 @@ spring.h2.console.enabled=true
 
 server.error.whitelabel.enabled=false
 
-spring.session.store-type=jdbc
-spring.session.jdbc.initialize-schema=always
-spring.session.timeout.seconds=900
+#spring.session.store-type=jdbc
+#spring.session.jdbc.initialize-schema=always
+#spring.session.timeout.seconds=900
 
 spring.messages.basename=validation
+
+######Email Properties ######
+spring.mail.transport.protocol=smtp
+spring.mail.from.email=springfieldssms@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=springfieldssms@gmail.com
+spring.mail.password=#!SLYc]Y1.*vUGZ
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
