add email duplicate validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,8 +45,8 @@ server.port=8443
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/lpasquale.p12
+server.ssl.key-store=classpath:keystore/jbyrne.p12
 # The password used to generate the certificate
 server.ssl.key-store-password=keystorepassword
 # The alias mapped to the certificate
-server.ssl.key-alias=lpasquale
+server.ssl.key-alias=jbyrne
