--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -2,3 +2,4 @@ register.username.exists=Username already exists.
 register.username.invalid=Invalid username.
 register.password.invalid=Password is required to be Very Strong.
 register.required=Input Required.
+register.email.exists=Account already exists.
